Activity service behavior fixes assigning schedules fixes