@@ -1,16 +1,11 @@
 package com.example.demo.service;
 
 import com.example.demo.dto.bsn_logic_dto.ActivityDto;
-import com.example.demo.entity.ActivityAssignmentLogEntity;
-import com.example.demo.entity.ActivityEntity;
-import com.example.demo.entity.UserEntity;
-import com.example.demo.entity.WorkSchedule;
-import com.example.demo.exception.ActivityAssignmentLogNotFoundException;
+import com.example.demo.entity.*;
 import com.example.demo.mapper.ActivityMapper;
-import com.example.demo.repository.ActivityAssignmentLogRepository;
-import com.example.demo.repository.ActivityRepository;
-import com.example.demo.repository.ScheduleRepository;
-import com.example.demo.repository.UserRepository;
+import com.example.demo.repository.*;
+import lombok.RequiredArgsConstructor;
+import lombok.extern.slf4j.Slf4j;
 import org.springframework.data.domain.*;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
@@ -23,7 +18,9 @@ import java.util.*;
 import java.util.stream.Collectors;
 import java.util.stream.IntStream;
 
+@Slf4j
 @Service
+@RequiredArgsConstructor
 public class ActivityService {
 
     private final ActivityRepository activityRepository;
@@ -31,18 +28,7 @@ public class ActivityService {
     private final ScheduleRepository scheduleRepository;
     private final ActivityMapper activityMapper;
     private final UserRepository userRepository;
-
-    public ActivityService(ActivityRepository activityRepository,
-                           ActivityAssignmentLogRepository activityAssignmentLogRepository,
-                           ScheduleRepository scheduleRepository,
-                           ActivityMapper activityMapper,
-                           UserRepository userRepository) {
-        this.activityRepository = activityRepository;
-        this.activityAssignmentLogRepository = activityAssignmentLogRepository;
-        this.scheduleRepository = scheduleRepository;
-        this.activityMapper = activityMapper;
-        this.userRepository = userRepository;
-    }
+    private final ActivityEmployeeRepository activityEmployeeRepository;
 
     @Transactional
     public Page<ActivityDto> findAll(int page, int size, String username, LocalDate startDate, LocalDate endDate) {
@@ -52,11 +38,12 @@ public class ActivityService {
         Page<ActivityEntity> activityPage = fetchActivityEntities(startDate, endDate, pageable);
         Page<ActivityDto> dtoPage = activityPage.map(activityMapper::activityEntityToDto);
 
-        setWorkdayFlag(activityPage, dtoPage, user.getId());
-        markAssignedForUser(dtoPage, user);
-        markHistoryFlag(dtoPage);
+        List<ActivityDto> updatedDtos = mapActivityEmployeeToDtos(dtoPage);
 
-        List<ActivityDto> updatedDtos = mapWorkScheduleToDtos(dtoPage);
+        setWorkdayFlag(activityPage, updatedDtos, user.getId());
+        markAssignedForUser(updatedDtos, user.getId());
+        markHistoryFlag(updatedDtos);
+
         return new PageImpl<>(updatedDtos, pageable, dtoPage.getTotalElements());
     }
 
@@ -74,94 +61,65 @@ public class ActivityService {
         return activityRepository.findAll(pageable);
     }
 
-    private void markAssignedForUser(Page<ActivityDto> dtoPage, UserEntity user) {
-        dtoPage.forEach(dto -> {
-            if (user.getId().equals(dto.getEmployeeId())) {
-                dto.setAssignedToLoggedUser(true);
-            }
+    private void markAssignedForUser(List<ActivityDto> dtoList, Integer userId) {
+        dtoList.forEach(dto -> {
+            List<Integer> employeeIds = Optional.ofNullable(dto.getEmployeeIdsAssigned()).orElse(Collections.emptyList());
+            dto.setAssignedToLoggedUser(employeeIds.contains(userId));
         });
     }
 
-    private void markHistoryFlag(Page<ActivityDto> dtoPage) {
-        List<Integer> activityIds = dtoPage.stream()
+    private void markHistoryFlag(List<ActivityDto> dtoList) {
+        List<Integer> activityIds = dtoList.stream()
                 .map(ActivityDto::getActivityId)
-                .collect(Collectors.toList());
+                .toList();
 
         Set<Integer> historySet = new HashSet<>(activityAssignmentLogRepository.findExistingActivityIdsInLog(activityIds));
 
-        dtoPage.forEach(dto -> dto.setHasHistory(historySet.contains(dto.getActivityId())));
+        dtoList.forEach(dto -> dto.setHasHistory(historySet.contains(dto.getActivityId())));
     }
 
     @Transactional
-    public List<ActivityDto> mapWorkScheduleToDtos(Page<ActivityDto> dtoPage) {
-        Set<String> dateSet = dtoPage.stream()
-                .map(dto -> dto.getActivityDate().toLocalDateTime().toLocalDate().toString())
-                .collect(Collectors.toSet());
+    public List<ActivityDto> mapActivityEmployeeToDtos(Page<ActivityDto> dtoPage) {
+        List<Integer> activityIds = dtoPage.getContent().stream()
+                .map(ActivityDto::getActivityId)
+                .toList();
 
-        List<WorkSchedule> schedules = scheduleRepository.findByDateIn(dateSet);
+        var assignments = activityEmployeeRepository.findByActivityActivityIdIn(activityIds);
 
-        DateTimeFormatter timeFormatter = DateTimeFormatter.ofPattern("HH:mm:ss");
-        DateTimeFormatter ymFormatter = DateTimeFormatter.ofPattern("yyyy-MM");
+        Map<Integer, List<UserEntity>> activityEmployeeMap = assignments.stream()
+                .collect(Collectors.groupingBy(
+                        a -> a.getActivity().getActivityId(),
+                        Collectors.mapping(ActivityEmployeeEntity::getEmployee, Collectors.toList())
+                ));
 
-        // Usunięto mapowanie activityEntityMap — niepotrzebne przy odczycie
-        return dtoPage.getContent().stream()
-                .map(dto -> applyWorkScheduleMapping(dto, schedules))
-                .collect(Collectors.toList());
-    }
+        List<ActivityDto> dtoList = dtoPage.getContent();
+        dtoList.forEach(dto -> {
+            List<UserEntity> employees = activityEmployeeMap.getOrDefault(dto.getActivityId(), Collections.emptyList());
 
-    private ActivityDto applyWorkScheduleMapping(ActivityDto dto,
-                                                 List<WorkSchedule> schedules) {
+            dto.setEmployeesAssigned(employees.stream()
+                    .map(UserEntity::getFullName)
+                    .distinct()
+                    .toList());
 
-        Optional<WorkSchedule> matchingSchedule = schedules.stream()
-                .filter(ws -> ws.getActivity() != null && ws.getActivity().getActivityId().equals(dto.getActivityId()))
-                .findFirst();
-
-        matchingSchedule.ifPresent(ws -> {
-            if (ws.getRoomSymbol() != null && !ws.getRoomSymbol().isEmpty()) {
-                dto.setRoomCode(ws.getRoomSymbol());
-                dto.setEmployeeFullName("");
-                if (ws.getEmployee() != null) {
-                    dto.setEmployeeCode(ws.getEmployee().getEmployeeCode());
-                    dto.setEmployeesAssigned(List.of(ws.getEmployee().getFullName()));
-                } else {
-                    dto.setEmployeeCode("Unknown");
-                    dto.setEmployeesAssigned(List.of("Unknown"));
-                }
-            } else {
-                dto.setEmployeeFullName("");
-                dto.setEmployeeCode(ws.getWorkMode());
-                List<String> assignedEmployeeNames = schedules.stream()
-                        .filter(s -> s.getActivity() != null
-                                && s.getActivity().getActivityId().equals(dto.getActivityId())
-                                && s.getWorkMode().equals(ws.getWorkMode()))
-                        .map(s -> s.getEmployee() != null ? s.getEmployee().getFullName() : "Unknown")
-                        .distinct()
-                        .collect(Collectors.toList());
-                dto.setEmployeesAssigned(assignedEmployeeNames);
-            }
+            dto.setEmployeeIdsAssigned(employees.stream()
+                    .map(UserEntity::getId)
+                    .distinct()
+                    .toList());
         });
 
-        return dto;
+        return dtoList;
     }
 
-
-    private void setWorkdayFlag(Page<ActivityEntity> activityPage, Page<ActivityDto> dtoPage, Integer employeeId) {
+    private void setWorkdayFlag(Page<ActivityEntity> activityPage, List<ActivityDto> dtoList, Integer employeeId) {
         List<ActivityEntity> entities = activityPage.getContent();
-        List<ActivityDto> dtos = dtoPage.getContent();
         DateTimeFormatter ymFormatter = DateTimeFormatter.ofPattern("yyyy-MM");
 
         IntStream.range(0, entities.size())
-                .filter(i -> entities.get(i).getActivityDate() != null && entities.get(i).getEmployee() != null)
+                .filter(i -> entities.get(i).getActivityDate() != null)
                 .forEach(i -> {
                     ActivityEntity entity = entities.get(i);
-                    ActivityDto dto = dtos.get(i);
-                    LocalDate date = entity.getActivityDate().toLocalDateTime().toLocalDate();
-                    String yearMonthStr = date.format(ymFormatter);
-                    int dayOfMonth = date.getDayOfMonth();
-                    boolean exists = scheduleRepository.existsByEmployee_IdAndYearMonthAndDayOfMonth(
-                            employeeId, yearMonthStr, dayOfMonth
-                    );
-                    dto.setProcedureScheduledOnEmployeesWorkingDay(exists);
+                    ActivityDto dto = dtoList.get(i);
+                    setWorkdayFlagForSingleActivity(dto, entity, employeeId);
                 });
     }
 
@@ -170,38 +128,114 @@ public class ActivityService {
         ActivityEntity activityEntity = activityRepository.findById(activityDto.getActivityId())
                 .orElseThrow(() -> new RuntimeException("Activity not found"));
 
-        UserEntity user = userRepository.findByEmployeeCode(username)
-                .orElseThrow(() -> new RuntimeException("User not found"));
+        UserEntity user = getUserByEmployeeCode(username);
 
         saveOldProcedureAssignment(activityEntity);
-        activityEntity.setEmployee(user);
-        activityRepository.save(activityEntity);
+        activityEmployeeRepository.deleteByActivityActivityId(activityEntity.getActivityId());
+
+        ActivityEmployeeEntity newAssignment = new ActivityEmployeeEntity();
+        newAssignment.setActivity(activityEntity);
+        newAssignment.setEmployee(user);
+        newAssignment.setUserModified(true);
+        activityEmployeeRepository.save(newAssignment);
 
         ActivityDto dto = activityMapper.activityEntityToDto(activityEntity);
         dto.setAssignedToLoggedUser(true);
         dto.setHasHistory(true);
+        dto.setEmployeesAssigned(List.of(user.getFullName()));
+        dto.setEmployeeIdsAssigned(List.of(user.getId()));
+
+        // Dodajemy ustawienie workDay flagi!
+        setWorkdayFlagForSingleActivity(dto, activityEntity, user.getId());
+
         return dto;
     }
 
     private void saveOldProcedureAssignment(ActivityEntity activityEntity) {
+        List<ActivityEmployeeEntity> existingAssignments = activityEmployeeRepository.findByActivityActivityId(activityEntity.getActivityId());
+
+        if (existingAssignments.isEmpty()) {
+            log.info("No existing assignments to log for activity {}", activityEntity.getActivityId());
+            return;
+        }
+
+        List<UserEntity> employees = existingAssignments.stream()
+                .map(ActivityEmployeeEntity::getEmployee)
+                .toList();
+
         ActivityAssignmentLogEntity logEntity = ActivityAssignmentLogEntity.builder()
                 .activity(activityEntity)
+                .employees(employees)
                 .assignedAt(LocalDateTime.now())
                 .build();
+
         activityAssignmentLogRepository.save(logEntity);
+        log.info("Saved assignment log for activity {} with {} employees", activityEntity.getActivityId(), employees.size());
     }
 
     @Transactional
-    public ActivityDto returnToOldAssignment(ActivityDto activityDto) {
+    public ActivityDto returnToOldAssignment(ActivityDto activityDto, String username) {
         ActivityEntity activityEntity = activityRepository.findById(activityDto.getActivityId())
                 .orElseThrow(() -> new RuntimeException("Activity not found"));
 
-        ActivityAssignmentLogEntity logEntity = activityAssignmentLogRepository
-                .findTopByActivity_ActivityIdOrderByAssignedAtDesc(activityDto.getActivityId())
-                .orElseThrow(() -> new ActivityAssignmentLogNotFoundException(activityDto.getActivityId()));
+        UserEntity user = getUserByEmployeeCode(username);
 
-        activityRepository.save(activityEntity);
-        saveOldProcedureAssignment(activityEntity);
-        return activityMapper.activityEntityToDto(activityEntity);
+        Optional<ActivityAssignmentLogEntity> optionalLogEntity = activityAssignmentLogRepository
+                .findTopByActivity_ActivityIdOrderByAssignedAtDesc(activityDto.getActivityId());
+
+        activityEmployeeRepository.deleteByActivityActivityId(activityEntity.getActivityId());
+
+        ActivityDto dto = activityMapper.activityEntityToDto(activityEntity);
+
+        if (optionalLogEntity.isEmpty()) {
+            log.info("No assignment history found for activity {}. Current assignments removed.", activityEntity.getActivityId());
+            dto.setHasHistory(false);
+            dto.setEmployeesAssigned(Collections.emptyList());
+            dto.setEmployeeIdsAssigned(Collections.emptyList());
+            setWorkdayFlagForSingleActivity(dto,activityEntity,user.getId());
+            return dto;
+        }
+
+        ActivityAssignmentLogEntity logEntity = optionalLogEntity.get();
+
+        List<ActivityEmployeeEntity> restoredAssignments = logEntity.getEmployees().stream()
+                .map(employee -> {
+                    ActivityEmployeeEntity assignment = new ActivityEmployeeEntity();
+                    assignment.setActivity(activityEntity);
+                    assignment.setEmployee(employee);
+                    assignment.setUserModified(false);
+                    return assignment;
+                })
+                .toList();
+
+        activityEmployeeRepository.saveAll(restoredAssignments);
+
+        dto.setHasHistory(true);
+        dto.setEmployeesAssigned(logEntity.getEmployees().stream()
+                .map(UserEntity::getFullName)
+                .toList());
+        dto.setEmployeeIdsAssigned(logEntity.getEmployees().stream()
+                .map(UserEntity::getId)
+                .toList());
+
+        // Używamy username (userId), tak jak w markActivityAsOwn
+        setWorkdayFlagForSingleActivity(dto, activityEntity, user.getId());
+
+        return dto;
+    }
+
+    private void setWorkdayFlagForSingleActivity(ActivityDto dto, ActivityEntity entity, Integer employeeId) {
+        if (entity.getActivityDate() == null) {
+            dto.setProcedureScheduledOnEmployeesWorkingDay(false);
+            return;
+        }
+
+        LocalDate date = entity.getActivityDate().toLocalDateTime().toLocalDate();
+        String yearMonthStr = date.format(DateTimeFormatter.ofPattern("yyyy-MM"));
+        int dayOfMonth = date.getDayOfMonth();
+
+        boolean exists = scheduleRepository.existsByEmployee_IdAndYearMonthAndDayOfMonth(employeeId, yearMonthStr, dayOfMonth);
+
+        dto.setProcedureScheduledOnEmployeesWorkingDay(exists);
     }
 }
